[gd_scene load_steps=72 format=3 uid="uid://ct4v1je2a41a0"]

[ext_resource type="Script" path="res://player.gd" id="1_1qhyf"]
[ext_resource type="Script" path="res://game.gd" id="1_334th"]
[ext_resource type="Texture2D" uid="uid://c3mubcautp7yj" path="res://sprites/background/background_principal.png" id="2_1nax5"]
[ext_resource type="Script" path="res://score_label.gd" id="7_mknkk"]
[ext_resource type="Texture2D" uid="uid://w5xbftelxn6u" path="res://sprites/pause.jpeg" id="23_ch4p5"]
[ext_resource type="Script" path="res://TutorialCanvas.gd" id="25_0maaq"]
[ext_resource type="Texture2D" uid="uid://d3pyp00afxytl" path="res://sprites/fundo-de-textura-quadriculado-grunge.jpg" id="25_gamnd"]
[ext_resource type="Texture2D" uid="uid://be37a4h0pasu0" path="res://sprites/Idle/ezgif.com-resize.png" id="35_020d5"]
[ext_resource type="Texture2D" uid="uid://drm6c2nx875bj" path="res://sprites/Idle/ezgif.com-resize (1).png" id="36_k740i"]
[ext_resource type="Texture2D" uid="uid://drexrxaie23te" path="res://sprites/Idle/ezgif.com-resize (2).png" id="37_cnlu2"]
[ext_resource type="Texture2D" uid="uid://cxrr7y1b02wtk" path="res://sprites/Idle/ezgif.com-resize (3).png" id="38_yiicw"]
[ext_resource type="Texture2D" uid="uid://yuu18fid0py0" path="res://sprites/Idle/ezgif.com-resize (4).png" id="39_6bgst"]
[ext_resource type="Texture2D" uid="uid://dq48clnu88mjk" path="res://sprites/Idle/ezgif.com-resize (5).png" id="40_vw6qy"]
[ext_resource type="Texture2D" uid="uid://d24t4wvfqg1kl" path="res://sprites/Salto/ezgif.com-resize.png" id="41_esgw1"]
[ext_resource type="Texture2D" uid="uid://e50nch0php2l" path="res://sprites/Salto/ezgif.com-resize (1).png" id="42_2ordb"]
[ext_resource type="Texture2D" uid="uid://vs05d2s4j33w" path="res://sprites/Corrida/ezgif.com-resize.png" id="42_ruxq5"]
[ext_resource type="Texture2D" uid="uid://c1axo58g0kwlk" path="res://sprites/Corrida/ezgif.com-resize (1).png" id="43_jbvyx"]
[ext_resource type="Texture2D" uid="uid://p6tw8d25j80i" path="res://sprites/Salto/ezgif.com-resize (2).png" id="43_xjhpp"]
[ext_resource type="Texture2D" uid="uid://dnn1xigcoe00x" path="res://sprites/Salto/ezgif.com-resize (3).png" id="44_3xymx"]
[ext_resource type="Texture2D" uid="uid://blir8qyhkq4n3" path="res://sprites/Corrida/ezgif.com-resize (2).png" id="44_w84wy"]
[ext_resource type="Texture2D" uid="uid://5kgegee73ctu" path="res://sprites/Salto/ezgif.com-resize (4).png" id="45_4wrx5"]
[ext_resource type="Texture2D" uid="uid://b8xy4frhh5xpq" path="res://sprites/Corrida/ezgif.com-resize (3).png" id="45_titsj"]
[ext_resource type="Texture2D" uid="uid://bo44hiy4560jl" path="res://sprites/Corrida/ezgif.com-resize (4).png" id="46_kbpuu"]
[ext_resource type="Texture2D" uid="uid://dm3n3aq0pxc3w" path="res://sprites/Salto/ezgif.com-resize (5).png" id="46_t6g41"]
[ext_resource type="Texture2D" uid="uid://p8uu5xov1q0c" path="res://sprites/Corrida/ezgif.com-resize (5).png" id="47_vskvu"]
[ext_resource type="AudioStream" uid="uid://bwplngfj02gwe" path="res://audio/game.mp3" id="55_cao2d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h5ww7"]
atlas = ExtResource("2_1nax5")
region = Rect2(0, 0, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8ytg"]
atlas = ExtResource("2_1nax5")
region = Rect2(1200, 0, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvr2y"]
atlas = ExtResource("2_1nax5")
region = Rect2(2400, 0, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldbmt"]
atlas = ExtResource("2_1nax5")
region = Rect2(3600, 0, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_4uogi"]
atlas = ExtResource("2_1nax5")
region = Rect2(4800, 0, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_664k2"]
atlas = ExtResource("2_1nax5")
region = Rect2(0, 675, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5v51"]
atlas = ExtResource("2_1nax5")
region = Rect2(1200, 675, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8tjf"]
atlas = ExtResource("2_1nax5")
region = Rect2(2400, 675, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kp3o"]
atlas = ExtResource("2_1nax5")
region = Rect2(3600, 675, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvvqr"]
atlas = ExtResource("2_1nax5")
region = Rect2(4800, 675, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_lctrs"]
atlas = ExtResource("2_1nax5")
region = Rect2(0, 1350, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqjg8"]
atlas = ExtResource("2_1nax5")
region = Rect2(1200, 1350, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_7amjl"]
atlas = ExtResource("2_1nax5")
region = Rect2(2400, 1350, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_g42x6"]
atlas = ExtResource("2_1nax5")
region = Rect2(3600, 1350, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvegk"]
atlas = ExtResource("2_1nax5")
region = Rect2(4800, 1350, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_qop8y"]
atlas = ExtResource("2_1nax5")
region = Rect2(0, 2025, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6hkx"]
atlas = ExtResource("2_1nax5")
region = Rect2(1200, 2025, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k2sg"]
atlas = ExtResource("2_1nax5")
region = Rect2(2400, 2025, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_4f0kp"]
atlas = ExtResource("2_1nax5")
region = Rect2(3600, 2025, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jh5u"]
atlas = ExtResource("2_1nax5")
region = Rect2(4800, 2025, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_08q2t"]
atlas = ExtResource("2_1nax5")
region = Rect2(0, 2700, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqv3b"]
atlas = ExtResource("2_1nax5")
region = Rect2(1200, 2700, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_ck8hq"]
atlas = ExtResource("2_1nax5")
region = Rect2(2400, 2700, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_lj17k"]
atlas = ExtResource("2_1nax5")
region = Rect2(3600, 2700, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7m8o"]
atlas = ExtResource("2_1nax5")
region = Rect2(4800, 2700, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_falwi"]
atlas = ExtResource("2_1nax5")
region = Rect2(0, 3375, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_geimc"]
atlas = ExtResource("2_1nax5")
region = Rect2(1200, 3375, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdw2l"]
atlas = ExtResource("2_1nax5")
region = Rect2(2400, 3375, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkt8l"]
atlas = ExtResource("2_1nax5")
region = Rect2(3600, 3375, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d4fs"]
atlas = ExtResource("2_1nax5")
region = Rect2(4800, 3375, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybnul"]
atlas = ExtResource("2_1nax5")
region = Rect2(0, 4050, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_vflng"]
atlas = ExtResource("2_1nax5")
region = Rect2(1200, 4050, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_han5s"]
atlas = ExtResource("2_1nax5")
region = Rect2(2400, 4050, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_repto"]
atlas = ExtResource("2_1nax5")
region = Rect2(3600, 4050, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_otihd"]
atlas = ExtResource("2_1nax5")
region = Rect2(4800, 4050, 1200, 675)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi700"]
atlas = ExtResource("2_1nax5")
region = Rect2(0, 4725, 1200, 675)

[sub_resource type="SpriteFrames" id="SpriteFrames_0touo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5ww7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8ytg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvr2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldbmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4uogi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_664k2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5v51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8tjf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvvqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lctrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqjg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7amjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g42x6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvegk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qop8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6hkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k2sg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f0kp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jh5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08q2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqv3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ck8hq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lj17k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7m8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_falwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_geimc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdw2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkt8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d4fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybnul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vflng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_han5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_repto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otihd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi700")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vpgti"]
size = Vector2(50, 89)

[sub_resource type="SpriteFrames" id="SpriteFrames_opnud"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("35_020d5")
}, {
"duration": 1.0,
"texture": ExtResource("36_k740i")
}, {
"duration": 1.0,
"texture": ExtResource("37_cnlu2")
}, {
"duration": 1.0,
"texture": ExtResource("38_yiicw")
}, {
"duration": 1.0,
"texture": ExtResource("40_vw6qy")
}, {
"duration": 1.0,
"texture": ExtResource("39_6bgst")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("41_esgw1")
}, {
"duration": 1.0,
"texture": ExtResource("42_2ordb")
}, {
"duration": 1.0,
"texture": ExtResource("43_xjhpp")
}, {
"duration": 1.0,
"texture": ExtResource("44_3xymx")
}, {
"duration": 1.0,
"texture": ExtResource("45_4wrx5")
}, {
"duration": 1.0,
"texture": ExtResource("46_t6g41")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("42_ruxq5")
}, {
"duration": 1.0,
"texture": ExtResource("43_jbvyx")
}, {
"duration": 1.0,
"texture": ExtResource("44_w84wy")
}, {
"duration": 1.0,
"texture": ExtResource("45_titsj")
}, {
"duration": 1.0,
"texture": ExtResource("46_kbpuu")
}, {
"duration": 1.0,
"texture": ExtResource("47_vskvu")
}],
"loop": true,
"name": &"move",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_si6tk"]
size = Vector2(20, 684)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_phn3q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_27dab"]
size = Vector2(20, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_60503"]
size = Vector2(1280, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_yc1ff"]
atlas = ExtResource("25_gamnd")
region = Rect2(0, 0, 4500, 4500)

[sub_resource type="SpriteFrames" id="SpriteFrames_wn8bq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yc1ff")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Game" type="Node2D"]
script = ExtResource("1_334th")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(648, 341)
scale = Vector2(1.08, 1)
sprite_frames = SubResource("SpriteFrames_0touo")
autoplay = "default"
frame_progress = 0.816745

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(600, 32)
script = ExtResource("1_1qhyf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(2.08165e-12, 2.08165e-12)
shape = SubResource("RectangleShape2D_vpgti")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
position = Vector2(2.08165e-12, 2.08165e-12)
sprite_frames = SubResource("SpriteFrames_opnud")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.830813

[node name="RayCastRight" type="RayCast2D" parent="Player"]
position = Vector2(2.08165e-12, 2.08165e-12)
target_position = Vector2(32, 2.08165e-12)

[node name="RayCastLeft" type="RayCast2D" parent="Player"]
position = Vector2(2.08165e-12, 2.08165e-12)
target_position = Vector2(-32, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="StaticBodyLeft" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBodyLeft"]
position = Vector2(-12, 341)
shape = SubResource("RectangleShape2D_si6tk")

[node name="StaticBodyRight" type="StaticBody2D" parent="."]
position = Vector2(1303, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBodyRight"]
position = Vector2(-12, 341)
shape = SubResource("RectangleShape2D_si6tk")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 25.0
offset_right = 276.0
offset_bottom = 108.0
theme_override_font_sizes/font_size = 50
text = "0 Pts"
script = ExtResource("7_mknkk")

[node name="Button" type="Button" parent="."]
offset_left = 1213.0
offset_top = 11.0
offset_right = 1272.0
offset_bottom = 59.0
text = "| |"
icon = ExtResource("23_ch4p5")
flat = true
icon_alignment = 1
expand_icon = true

[node name="TouchScreenButtonLeft" type="TouchScreenButton" parent="."]
position = Vector2(205, 587)
scale = Vector2(20, 20)
shape = SubResource("RectangleShape2D_phn3q")
action = "move_left"

[node name="TouchScreenButtonLeftJump" type="TouchScreenButton" parent="."]
position = Vector2(204, 183)
scale = Vector2(20, 20)
shape = SubResource("RectangleShape2D_phn3q")
action = "move_left_jump"

[node name="TouchScreenButtonRight" type="TouchScreenButton" parent="."]
position = Vector2(1078, 576)
scale = Vector2(20, 20)
shape = SubResource("RectangleShape2D_phn3q")
action = "move_right"

[node name="TouchScreenButtonRightJump" type="TouchScreenButton" parent="."]
position = Vector2(1080, 218)
scale = Vector2(20, 20)
shape = SubResource("RectangleShape2D_27dab")
action = "move_right_jump"

[node name="MusicBackground1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("55_cao2d")
autoplay = true

[node name="TutorialCanvas" type="CanvasLayer" parent="."]
script = ExtResource("25_0maaq")

[node name="TimerTutorial" type="Timer" parent="TutorialCanvas"]
wait_time = 5.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(641, 690)
shape = SubResource("RectangleShape2D_60503")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="StaticBody2D"]
position = Vector2(642, 891)
scale = Vector2(0.286667, 0.0937778)
sprite_frames = SubResource("SpriteFrames_wn8bq")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="pauseGame"]
[connection signal="finished" from="MusicBackground1" to="." method="_on_music_background_1_finished"]
[connection signal="timeout" from="TutorialCanvas/TimerTutorial" to="TutorialCanvas" method="_on_timer_timeout"]
